--- a/pre-registration-default.properties
+++ b/pre-registration-default.properties
@@ -18,7 +18,7 @@ javax.persistence.jdbc.driver=org.postgresql.Driver
 mosip.database.ip=postgres
 mosip.database.port=80
 javax.persistence.jdbc.url=jdbc:postgresql://${mosip.database.ip}:${mosip.database.port}/mosip_prereg?useSSL=false
-javax.persistence.jdbc.user=prereguser
+javax.persistence.jdbc.user=dbadmin
 javax.persistence.jdbc.password=${db.dbuser.password}
 
 ## Hibernate
