--- a/pre-registration-default.properties
+++ b/pre-registration-default.properties
@@ -285,8 +285,8 @@ mosip.preregistration.login.id.validateotp=mosip.pre-registration.login.useridot
 mosip.preregistration.login.id.invalidatetoken=mosip.pre-registration.login.invalidate
 mosip.preregistration.login.id.config=mosip.pre-registration.login.config
 
-iam.base.url=${keycloak.external.host}
-auth-token-generator.rest.issuerUrl=${iam.base.url}/auth/realms/preregistration
+iam.base.url=${keycloak.internal.url}
+auth-token-generator.rest.issuerUrl=${iam.base.url}/auth/realms/mosip
 validationStatus=success
 context=auth-otp
 prereg.auth.jwt.secret=Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
