--- a/application-default.properties
+++ b/application-default.properties
@@ -315,10 +315,20 @@ mosip.kernel.uin.length.conjugative-even-digits-limit=3
 
 
 ## Auth adapter
-auth.server.validate.url=${mosip.kernel-auth-service.url}/v1/authmanager/authorize/admin/validateToken
-auth.server.admin.issuer.uri=${keycloak.external.host}/auth/realms/mosip
-auth-token-generator.rest.issuerUrl=${keycloak.external.host}/auth/realms/mosip
-mosip.keycloak.issuerUrl=${keycloak.external.host}/auth/realms/mosip
+#auth.server.validate.url=${mosip.kernel-auth-service.url}/v1/authmanager/authorize/admin/validateToken
+#auth.server.admin.issuer.uri=${keycloak.external.host}/auth/realms/mosip
+#auth-token-generator.rest.issuerUrl=${keycloak.external.host}/auth/realms/mosip
+#mosip.keycloak.issuerUrl=${keycloak.external.host}/auth/realms/mosip
+
+## Auth adapter
+auth.server.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
+
+#This is the frontend url configured in the open-id system. This url should match the issuer attribute in JWT.
+auth.server.admin.issuer.internal.uri=${keycloak.internal.url}/auth/realms/
+auth.server.admin.issuer.uri=${keycloak.external.url}/auth/realms/
+auth-token-generator.rest.issuerUrl=${keycloak.internal.url}/auth/realms/mosip
+mosip.keycloak.issuerUrl=${keycloak.internal.url}/auth/realms/mosip
+
 
 #iam adapter
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
