--- a/pre-registration-default.properties
+++ b/pre-registration-default.properties
@@ -240,9 +240,9 @@ userIdType=USERID
 appId=prereg
 
 ## Auth service 
-kernel.auth.env=${mosip.kernel-auditmanager-service.url}
+kernel.auth.env=${mosip.kernel.auditmanager.url}
 kernel.auth.contextpath=authmanager
-auth.server.validate.url=${mosip.kernel-auth-service.url}/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-reg-client
 
 ## PRID service 
