--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -41,10 +41,10 @@ mosip.kernel.sms.sender=sender
 mosip.kernel.sms.unicode=unicode
 
 ## Email notification
-mosip.kernel.notification.email.from=info@mosip.io
-spring.mail.host=${email.smtp.host}
-spring.mail.username=${email.smtp.username}
-spring.mail.password=${email.smtp.secret}
+mosip.kernel.notification.email.from=mosipidms@gmail.com
+spring.mail.host=smtp.gmail.com
+spring.mail.username=mosipidms@gmail.com
+spring.mail.password=Aip@2019
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
