--- a/kernel-default.properties
+++ b/kernel-default.properties
@@ -44,7 +44,7 @@ mosip.kernel.sms.unicode=unicode
 mosip.kernel.notification.email.from=mosipidms@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.username=mosipidms@gmail.com
-spring.mail.password=Aip@2019
+spring.mail.password=bslagwtqkvavanpx
 spring.mail.port=587
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.required=true
