--- a/admin-default.properties
+++ b/admin-default.properties
@@ -15,6 +15,10 @@ mosip.admin.request-id=ADMIN.REQUEST
 mosip.kernel.database.hostname=postgres
 mosip.kernel.database.port=80
 
+# Kernel Crypto signature Added by niyas
+registration.processor.signature.isEnabled=true
+
+
 ## Account management
 authmanager.base.url=${mosip.kernel-auth-service.url}/v1/authmanager
 mosip.admin.accountmgmt.auth-manager-base-uri=${mosip.kernel-auth-service.url}/v1/authmanager
