--- a/application-default.properties
+++ b/application-default.properties
@@ -41,6 +41,9 @@ activemq.core.port=80
 kafka.profile=default.svc.cluster.local
 kafka.port=9092
 
+# Kernel Crypto signature Added by niyas
+registration.processor.signature.isEnabled=true
+
 #Real BioSDK server different biosdk server for different modules can be configured.
 #mosip.ida.biosdk-service.url=http://15.206.206.205
 #mosip.regproc.biosdk-service.url=http://15.206.206.205
