--- a/application-default-dmz.properties
+++ b/application-default-dmz.properties
@@ -13,7 +13,8 @@ mosip.kernel.idobjectvalidator.schema-name=mosip-identity-json-schema.json
 mosip.kernel.idobjectvalidator.file-storage-uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 mosip.kernel.idobjectvalidator.masterdata.locations.locationNotAvailable=NA
 
-
+# Kernel Crypto signature
+registration.processor.signature.isEnabled=true
 
 mosip.masterdata.base.url = ${mz.ingress.base.url}
 mosip.kernel.idobjectvalidator.masterdata.languages.rest.uri=${mosip.masterdata.base.url}/v1/masterdata/languages
