--- a/registration-processor-default.properties
+++ b/registration-processor-default.properties
@@ -272,6 +272,9 @@ registration.processor.queue.username=artemis
 registration.processor.queue.password=${activemq.password}
 registration.processor.queue.url=${activemq.host}:${activemq.core.port}
 registration.processor.queue.typeOfQueue=ACTIVEMQ
+## Queue Added by niyas
+registration.processor.queue.connection.retry.count=100
+registration.processor.queue.trusted.packages=io.mosip.*
 
 registration.processor.queue.manualverification.request=mosip-to-mv
 # queue name where mosip will receive response from external mv system
