--- a/registration-processor-default.properties
+++ b/registration-processor-default.properties
@@ -44,10 +44,10 @@ hibernate.show_sql=false
 
 ## Packets
 ## This must match mounted folder specified in the helm chart of packet receiver.
-#registration.processor.LANDING_ZONE = /mnt/landing
+registration.processor.LANDING_ZONE = /mnt/landing
 
 # Landing zone folder where uploaded files are temporarily kept edited by niyas
-registration.processor.LANDING_ZONE = /mnt/regproc/landing
+#registration.processor.LANDING_ZONE = /mnt/regproc/landing
 # The known packet sources. Should be set as all fieldCategory present in idschema
 # (NOTE : if fieldCategory is set as pvt then the source should be id)
 registration.processor.sourcepackets=id,evidence,optional
