--- a/registration-processor-default.properties
+++ b/registration-processor-default.properties
@@ -47,7 +47,7 @@ hibernate.show_sql=false
 #registration.processor.LANDING_ZONE = /mnt/landing
 
 # Landing zone folder where uploaded files are temporarily kept edited by niyas
-registration.processor.LANDING_ZONE = /home/ftp1/LANDING_ZONE
+registration.processor.LANDING_ZONE = /mnt/regproc/landing
 # The known packet sources. Should be set as all fieldCategory present in idschema
 # (NOTE : if fieldCategory is set as pvt then the source should be id)
 registration.processor.sourcepackets=id,evidence,optional
