--- a/registration-processor-default-dmz.properties
+++ b/registration-processor-default-dmz.properties
@@ -49,7 +49,7 @@ ENCRYPTURL=${mz.ingress.url}/v1/keymanager/encrypt
 #------------------------------------Other common libraries properties-----------------------------#
 
 # Landing zone folder where uploaded files are temporarily kept
-registration.processor.LANDING_ZONE = /mnt/regproc/landing
+registration.processor.LANDING_ZONE = /mnt/landing
 
 # Base base package to be used for scanning components of the IAM adapter to autowire
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
