--- a/registration-processor-default.properties
+++ b/registration-processor-default.properties
@@ -9,6 +9,9 @@
 # activemq.host
 # activemq.core.port
 
+#Added by niyas 15th temp
+landing.zone.account.name=mosipuser
+
 registration.processor.zone=default
 
 ## Health check
