--- a/registration-processor-default-dmz.properties
+++ b/registration-processor-default-dmz.properties
@@ -2,6 +2,9 @@
 #---------------------------------------- COMMON PROPERTIES ----------------------------------------
 ####################################################################################################
 
+#Added by niyas 15th temp
+landing.zone.account.name=mosipuser
+
 #------------------------------------------Spring properties---------------------------------------#
 
 # DB details to which regproc dmz services and stage will connect
