--- a/registration-processor-default-dmz.properties
+++ b/registration-processor-default-dmz.properties
@@ -4,6 +4,7 @@
 
 #Added by niyas 15th temp
 landing.zone.account.name=mosipuser
+registration.processor.queue.trusted.packages=
 
 #------------------------------------------Spring properties---------------------------------------#
 
