--- a/admin-default.properties
+++ b/admin-default.properties
@@ -283,3 +283,21 @@ mosip.admin.audit.manager.eventName.pattern=^(Click|Page View): ([\\W|\\w]{1,100
 
 # Mapping identity json to map with the applicant id json
 registration.processor.identityjson=identity-mapping.json
+
+###Key manager url's used by KeyManagerDelegation api from admin-service to delegate request
+mosip.kernel.keymanager.generatecsr=${mosip.kernel.keymanager.url}/v1/keymanager/generateCSR
+mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/getCertificate?
+mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
+mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
+
+# this property are used in AdminProxyService to get base url and version
+mosip.admin.masterdata.service.version=masterdata.kernel/v1
+mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.base.url=http:/
+mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+auth.allowed.urls=https://${mosip.admin.host}/
+
+# query param usd to refer url to redirect after logout
+mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
+# end session endpoint in OIDC
+mosip.iam.end-session-endpoint-path=/protocol/openid-connect/logout
