--- a/admin-default.properties
+++ b/admin-default.properties
@@ -290,4 +290,15 @@ mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymana
 mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
+# this property are used in AdminProxyService to get base url and version
+mosip.admin.masterdata.service.version=masterdata.kernel/v1
+mosip.admin.keymanager.service.version=keymanager.keymanager/v1
 mosip.admin.base.url=http:/
+mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+
+auth.allowed.urls=https://qa.pkiblog.com/
+
+# query param usd to refer url to redirect after logout
+mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
+# end session endpoint in OIDC
+mosip.iam.end-session-endpoint-path=/protocol/openid-connect/logout
