--- a/admin-default.properties
+++ b/admin-default.properties
@@ -296,7 +296,7 @@ mosip.admin.keymanager.service.version=keymanager.keymanager/v1
 mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=https://qa.pkiblog.com/
+auth.allowed.urls=http://admin.default/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
