--- a/admin-default.properties
+++ b/admin-default.properties
@@ -291,10 +291,11 @@ mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keym
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-#mosip.admin.masterdata.service.version=${mosip.kernel.masterdata.url}/v1
-mosip.admin.keymanager.service.version=keymanager.keymanager/v1
-mosip.admin.base.url=http://
+#mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+#mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.masterdata.service.version=v1
+mosip.admin.keymanager.service.version=v1
+mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
 auth.allowed.urls=http://admin.default/
