--- a/admin-default.properties
+++ b/admin-default.properties
@@ -298,7 +298,8 @@ mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=http://admin.default/
+#auth.allowed.urls=http://admin-service.defaul/
+auth.allowed.urls=https://qa.pkiblog.com/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
