--- a/admin-default.properties
+++ b/admin-default.properties
@@ -295,7 +295,7 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 #mosip.admin.keymanager.service.version=keymanager.keymanager/v1
 mosip.admin.masterdata.service.version=v1
 mosip.admin.keymanager.service.version=v1
-mosip.admin.base.url=https://qa.pkiblog.com
+mosip.admin.base.url=https://qa.pkiblog.com/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
 #auth.allowed.urls=http://admin-service.defaul/
