--- a/admin-default.properties
+++ b/admin-default.properties
@@ -290,16 +290,17 @@ mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymana
 mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
+
+
 # this property are used in AdminProxyService to get base url and version
-#mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-#mosip.admin.keymanager.service.version=keymanager.keymanager/v1
-mosip.admin.masterdata.service.version=v1
-mosip.admin.keymanager.service.version=v1
-mosip.admin.base.url=https://qa.pkiblog.com/
+mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.base.url=http://
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-#auth.allowed.urls=http://admin-service.defaul/
-auth.allowed.urls=https://qa.pkiblog.com/
+auth.allowed.urls=http://admin.default/
+
+
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
