--- a/admin-default.properties
+++ b/admin-default.properties
@@ -295,7 +295,7 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 # this property are used in AdminProxyService to get base url and version
 mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-mosip.admin.keymanager.service.version=kernel-keymanager-service/v1
+mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
 mosip.admin.base.url=http://
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
