--- a/admin-default.properties
+++ b/admin-default.properties
@@ -296,7 +296,7 @@ mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=http://admin.default/
+auth.allowed.urls=
 
 
 # this property are used in AdminProxyService to get base url and version
