--- a/admin-default.properties
+++ b/admin-default.properties
@@ -293,11 +293,12 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=masterdata.kernel/v1
+mosip.admin.masterdata.service.version=${mosip.kernel-masterdata-service.url}/v1
 mosip.admin.keymanager.service.version=keymanager.keymanager/v1
 mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=http://admin.default:80/
+
+auth.allowed.urls=http://admin.default/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
