--- a/admin-default.properties
+++ b/admin-default.properties
@@ -295,10 +295,10 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 # this property are used in AdminProxyService to get base url and version
 mosip.admin.masterdata.service.version=v1
 mosip.admin.keymanager.service.version=v1
-mosip.admin.base.url=https://qa.pkiblog.com/admin
+mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=https://qa.pkiblog.com/
+auth.allowed.urls=https://qa.pkiblog.com/admin
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
