--- a/admin-default.properties
+++ b/admin-default.properties
@@ -293,12 +293,12 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=
-mosip.admin.keymanager.service.versio=
-mosip.admin.base.url=
-mosip.service.end-points=
+mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
+mosip.admin.base.url=http:/
+mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=
+auth.allowed.urls=https://qa.pkiblog.com/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
