--- a/admin-default.properties
+++ b/admin-default.properties
@@ -295,7 +295,7 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 # this property are used in AdminProxyService to get base url and version
 mosip.admin.masterdata.service.url=${mosip.kernel-masterdata-service.url}/v1
 mosip.admin.keymanager.service.url=${mosip.kernel-keymanager-service.url}/v1
-#mosip.admin.base.url=http:/
+mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
 auth.allowed.urls=${mosip.api.internal.url}/admin-ui/
