--- a/admin-default.properties
+++ b/admin-default.properties
@@ -293,8 +293,10 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.url=http://kernel-masterdata-service.default/v1
-mosip.admin.keymanager.service.url=http://kernel-keymanager-service.default/v1
+mosip.admin.masterdata.service.version=http://kernel-masterdata-service.default/v1
+mosip.admin.keymanager.service.version=http://kernel-keymanager-service.default/v1
+#mosip.admin.masterdata.service.url=
+#mosip.admin.keymanager.service.url=
 mosip.admin.base.url=
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
