--- a/admin-default.properties
+++ b/admin-default.properties
@@ -28,9 +28,9 @@ mosip.admin.accountmgmt.change-passoword-url=/changepassword/
 mosip.admin.accountmgmt.reset-password-url=/resetpassword/
 mosip.admin.app-id=admin
 
-mosip.kernel.signature.cryptomanager-encrypt-url=${mosip.kernel-keymanager-service.url}/v1/keymanager/private/encrypt
-auth.server.validate.url=${mosip.kernel-auth-service.url}/v1/authmanager/authorize/admin/validateToken
-auth.server.refreshToken.url=${mosip.kernel-auth-service.url}/v1/authmanager/authorize/admin/refreshToken
+mosip.kernel.signature.cryptomanager-encrypt-url=${mosip.kernel.keymanager.url}/v1/keymanager/private/encrypt
+auth.server.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
+auth.server.refreshToken.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/refreshToken
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-admin-client
 auth.role.prefix=ROLE_
 auth.header.name=Authorization
