--- a/admin-default.properties
+++ b/admin-default.properties
@@ -300,7 +300,7 @@ mosip.admin.keymanager.service.version=http://kernel-keymanager-service.default/
 mosip.admin.base.url=
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=${mosip.api.internal.url}/admin-ui/
+auth.allowed.urls=http://qa.pkiblog.com
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
