--- a/admin-default.properties
+++ b/admin-default.properties
@@ -205,7 +205,7 @@ mosip.iam.module.login_flow.scope=email
 mosip.iam.module.login_flow.response_type=code
 
 #This is the endpoint use by ui(browser) based applications to redirect to open-id system. This URL should be reachable through the browser.
-mosip.iam.authorization_endpoint=${keycloak.external.url}/auth/realms/mosip/protocol/openid-connect/auth
+mosip.iam.authorization_endpoint=${keycloak.internal.url}/auth/realms/mosip/protocol/openid-connect/auth
 mosip.iam.module.admin_realm_id=mosip
 mosip.iam.token_endpoint=${keycloak.internal.url}/auth/realms/mosip/protocol/openid-connect/token
 
@@ -269,7 +269,7 @@ mosip.kernel.jsonvalidator.property-source = LOCAL
 mosip.kernel.jsonvalidator.file-storage-uri=LOCAL
 
 mosip.kernel.machineid.length=5
-auth.server.admin.issuer.uri=${keycloak.external.url}/auth/realms/
+auth.server.admin.issuer.uri=${keycloak.internal.url}/auth/realms/
 MACHINE_GET_API=${mosip.kernel.masterdata.url}/v1/masterdata/machines/mappedmachines/
 CRYPTOMANAGERDECRYPT_API=${mosip.kernel.keymanager.url}/v1/keymanager/decrypt
 CRYPTOMANAGER_DECRYPT=${mosip.kernel.keymanager.url}/v1/keymanager/decrypt
