--- a/hotlist-default.properties
+++ b/hotlist-default.properties
@@ -26,7 +26,7 @@ mosip.hotlist.datasource.dialect=${mosip.hotlist.db.dialect}
 
 #Admin hotlist service authentication details
 mosip.admin.hotlist.auth.client-id=mosip-hotlist-client
-mosip.admin.hotlist.auth.secret-key=${mosip.mosip.hotlist.client.secret}
+mosip.admin.hotlist.auth.secret-key=${mosip.hotlist.client.secret}
 mosip.admin.hotlist.auth.app-id=hotlist
 
 # Websub
