--- a/hotlist-default.properties
+++ b/hotlist-default.properties
@@ -34,7 +34,7 @@ mosip.hotlist.topic-to-publish=MOSIP_HOTLIST
 
 #Auth Adapter
 mosip.iam.adapter.clientid.HOTLIST=${mosip.admin.hotlist.auth.client-id}
-mosip.iam.adapter.clientsecret.HOTLIST=${mosip.admin.hotlist.auth.secret-key}
+mosip.iam.adapter.clientsecret.HOTLIST=abc123
 mosip.iam.adapter.appid.HOTLIST=${mosip.admin.hotlist.auth.app-id}
 mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
 
