--- a/admin-default.properties
+++ b/admin-default.properties
@@ -226,11 +226,12 @@ mosip.iam.adapter.appid=admin
 mosip.iam.adapter.clientid=mosip-admin-client
 mosip.iam.adapter.clientsecret=${mosip.mosip.admin.client.secret}
 mosip.iam.adapter.issuerURL=${keycloak.external.host}/auth/realms/mosip
-mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
+mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
+#mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
 # in minutes
-mosip.iam.adapter.validate-expiry-check-rate=1440
+mosip.iam.adapter.validate-expiry-check-rate=15
 # in minutes
-mosip.iam.adapter.renewal-before-expiry-interval=1440
+mosip.iam.adapter.renewal-before-expiry-interval=15
 #this should be false if you don?t use this restTemplate true if you do
 mosip.iam.adapter.self-token-renewal-enable=true
 
