--- a/admin-default.properties
+++ b/admin-default.properties
@@ -204,7 +204,7 @@ mosip.security.secure-cookie=false
 # IAM
 mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
-mosip.iam.module.clientsecret=${mosip.mosip.admin.client.secret}
+mosip.iam.module.clientsecret=xyz123
 mosip.iam.module.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 #mosip.iam.module.redirecturi=${tempuri}/v1/admin/login-redirect/
 #mosip.iam.module.login_flow.scope=cls
