--- a/admin-default.properties
+++ b/admin-default.properties
@@ -48,7 +48,7 @@ hibernate.format_sql=false
 hibernate.connection.charSet=utf8
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
-hibernate.cache.use_structured_entries=false
+hibernate.cache.use_structured_entries=fals
 hibernate.generate_statistics=false
 
 ## Use registration
@@ -186,7 +186,7 @@ mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
+mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
