--- a/id-authentication-default.properties
+++ b/id-authentication-default.properties
@@ -619,7 +619,7 @@ mosip.role.keymanager.postjwtsign=ZONAL_ADMIN,GLOBAL_ADMIN,INDIVIDUAL,ID_AUTHENT
 mosip.role.keymanager.postjwtverify=ZONAL_ADMIN,GLOBAL_ADMIN,INDIVIDUAL,ID_AUTHENTICATION,TEST,REGISTRATION_ADMIN,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,PRE_REGISTRATION_ADMIN,RESIDENT
 
 # Secret will be used during kyc token generation.
-mosip.ida.kyc.token.secret=${mosip.ida.kyc.token.secret}
-mosip.ida.kyc.token.expire.time.adjustment.seconds=3000
-mosip.ida.kyc.exchange.default.lang=eng
-mosip.ida.idp.consented.address.subset.attributes=street_address,locality,region,postal_code,country
+#mosip.ida.kyc.token.secret=${mosip.ida.kyc.token.secret}
+#mosip.ida.kyc.token.expire.time.adjustment.seconds=3000
+#mosip.ida.kyc.exchange.default.lang=eng
+#mosip.ida.idp.consented.address.subset.attributes=street_address,locality,region,postal_code,country
