--- a/resident-default.properties
+++ b/resident-default.properties
@@ -315,9 +315,9 @@ mosip.iam.module.login_flow.name=authorization_code
 ################## MOSIP ESignet config
 mosip.iam.module.clientID=sK-zOe1Ke6X-f83yRpR4sOHxuPAWNZ5vzEpOjCyKWMk
 mosip.iam.module.clientsecret=
-mosip.api.public.host=qa.pkiblog.com
+#mosip.api.public.host=qa.pkiblog.com
 #mosip.iam.base.url=https://${mosip.api.public.host}/v1/esignet
-mosip.iam.base.url=https://${mosip.iam.base.url}/v1/esignet
+mosip.iam.base.url=https://${keycloak.internal.url}/v1/esignet
 mosip.iam.authorization_endpoint=https://${mosip.esignet.host}/authorize
 mosip.iam.token_endpoint=${mosip.iam.base.url}/oauth/token
 mosip.iam.userinfo_endpoint=${mosip.iam.base.url}/oidc/userinfo
