--- a/resident-default.properties
+++ b/resident-default.properties
@@ -317,7 +317,7 @@ mosip.iam.module.clientID=sK-zOe1Ke6X-f83yRpR4sOHxuPAWNZ5vzEpOjCyKWMk
 mosip.iam.module.clientsecret=
 #mosip.api.public.host=qa.pkiblog.com
 #mosip.iam.base.url=https://${mosip.api.public.host}/v1/esignet
-mosip.iam.base.url=https://${keycloak.internal.url}/v1/esignet
+mosip.iam.base.url=https://qa.pkilog.com/v1/esignet
 mosip.iam.authorization_endpoint=https://${mosip.esignet.host}/authorize
 mosip.iam.token_endpoint=${mosip.iam.base.url}/oauth/token
 mosip.iam.userinfo_endpoint=${mosip.iam.base.url}/oidc/userinfo
