--- a/resident-default.properties
+++ b/resident-default.properties
@@ -90,7 +90,7 @@ mosip.resident.user.profile.id=mosip.resident.profile
 PARTNER_REFERENCE_Id=mpartner-default-resident
 APPLICATION_Id=RESIDENT
 
-DECRYPT_API_URL=${mosip.kernel.keymanager.url}/v1/keymanager/decrypt
+DECRYPT_API_URL=http://keymanager.keymanager/v1/keymanager/decrypt
 mosip-prereg-host=${mosip.prereg.host}
 mosip-prereg-ui-url=https://${mosip-prereg-host}/pre-registration-ui/
 
@@ -141,8 +141,8 @@ CENTERDETAILS=${MASTER}/registrationcenters
 RIDGENERATION=${mosip.kernel.ridgenerator.url}/v1/ridgenerator/generate/rid
 CREATEVID=${mosip.idrepo.vid.url}/idrepository/v1/vid
 IDREPOSITORY=${mosip.idrepo.identity.url}/idrepository/v1/identity/
-ENCRYPTURL=${mosip.kernel.keymanager.url}/v1/keymanager/encrypt
-PACKETSIGNPUBLICKEY=${mosip.kernel.keymanager.url}/v1/keymanager/tpmsigning/publickey
+ENCRYPTURL=http://keymanager.keymanager/v1/keymanager/encrypt
+PACKETSIGNPUBLICKEY=http://keymanager.keymanager/v1/keymanager/tpmsigning/publickey
 MIDSCHEMAURL=${mosip.kernel.syncdata.url}/v1/syncdata/latestidschema
 
 #Master Data api calls
@@ -384,8 +384,8 @@ mosip.scope.resident.postPersonalizedCard=Manage-Credentials
 mosip.scope.resident.getOrderRedirect=Manage-Credentials
 
 ## Key manager
-mosip.resident.keymanager.encrypt-uri=${mosip.kernel.keymanager.url}/v1/keymanager/encrypt	
-mosip.resident.keymanager.decrypt-uri=${mosip.kernel.keymanager.url}/v1/keymanager/decrypt
+mosip.resident.keymanager.encrypt-uri=http://keymanager.keymanager/v1/keymanager/encrypt	
+mosip.resident.keymanager.decrypt-uri=http://keymanager.keymanager/v1/keymanager/decrypt
 
 # Object Store configuration
 mosip.resident.object.store.account-name=resident
@@ -717,7 +717,7 @@ mosip.client.assertion.reference.id=
 mosip.include.payload=true
 mosip.include.certificate=true
 mosip.include.cert.hash=false
-mosip.keymanager.jwt.sign.end.point=${mosip.kernel.keymanager.url}/v1/keymanager/jwtSign
+mosip.keymanager.jwt.sign.end.point=http://keymanager.keymanager/v1/keymanager/jwtSign
 mosip.iam.module.login_flow.claims={"userinfo":{"name":{"essential":true},"picture":{"essential":true},"email":{"essential":true},"phone_number":{"essential":true},"individual_id":{"essential":true}}}
 
 #Rectangle coordinates for pfd signataured data
@@ -727,7 +727,7 @@ mosip.resident.service.uincard.upperrightx=300
 mosip.resident.service.uincard.upperrighty=300
 mosip.resident.service.uincard.signature.reason="Digitally Signed"
 
-PDFSIGN=${mosip.kernel.keymanager.url}/v1/keymanager/pdf/sign
+PDFSIGN=http://keymanager.keymanager/v1/keymanager/pdf/sign
 
 # get partner details
 PARTNER_DETAILS_NEW_URL=${mosip.pms.partnermanager.url}/v1/partnermanager/partners/v2
