--- a/resident-default.properties
+++ b/resident-default.properties
@@ -9,6 +9,7 @@
 # keycloak.internal.url.
 
 #--------------APIs ID and Version --------------
+mosip.resident.client.secret=xyz789
 auth.internal.id=mosip.identity.auth.internal
 auth.internal.version=1.0
 mosip.registration.processor.print.id=mosip.registration.print
