--- a/resident-default.properties
+++ b/resident-default.properties
@@ -298,8 +298,8 @@ mosip.resident.database.port=5432
 
 javax.persistence.jdbc.driver=org.postgresql.Driver
 javax.persistence.jdbc.url=jdbc:postgresql://${mosip.resident.database.hostname}:${mosip.resident.database.port}/mosip_resident
-javax.persistence.jdbc.user=residentuser
-javax.persistence.jdbc.password=${db.dbuser.password}
+javax.persistence.jdbc.user=appadmin
+javax.persistence.jdbc.password=mosip123
 
 
 
