--- a/admin-default.properties
+++ b/admin-default.properties
@@ -186,7 +186,7 @@ mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=https://qa.pkiblog.com/v2/admin/login-redirect/
+mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
@@ -205,14 +205,14 @@ mosip.security.secure-cookie=false
 mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
 mosip.iam.module.clientsecret=xyz123
-mosip.iam.module.redirecturi=https://qa.pkiblog.com/v2/admin/login-redirect/
+mosip.iam.module.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
 #mosip.iam.module.redirecturi=${tempuri}/v1/admin/login-redirect/
 #mosip.iam.module.login_flow.scope=cls
 mosip.iam.module.login_flow.scope=email
 mosip.iam.module.login_flow.response_type=code
 mosip.iam.authorization_endpoint=${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/auth
 mosip.iam.module.admin_realm_id=mosip
-mosip.iam.token_endpoint=${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/token
+mosip.iam.token_endpoint=${mosip.iam.base.url}/auth/realms/mosip/protocol/openid-connect/token
 
 regproc.token.request.appid=regproc
 regproc.token.request.clientId=mosip-regproc-client
