--- a/admin-default.properties
+++ b/admin-default.properties
@@ -15,9 +15,6 @@ mosip.admin.request-id=ADMIN.REQUEST
 mosip.kernel.database.hostname=postgres
 mosip.kernel.database.port=80
 
-
-
-
 ## Account management
 authmanager.base.url=${mosip.kernel-auth-service.url}/v1/authmanager
 mosip.admin.accountmgmt.auth-manager-base-uri=${mosip.kernel-auth-service.url}/v1/authmanager
@@ -48,7 +45,7 @@ hibernate.format_sql=false
 hibernate.connection.charSet=utf8
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
-hibernate.cache.use_structured_entries=fals
+hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
 ## Use registration
@@ -186,11 +183,11 @@ mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
+mosip.admin-services.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
-mosip.admin-services.open-id.authorization_endpoint=https://qa.pkiblog.com/auth/realms/{realmId}/protocol/openid-connect/auth
-mosip.admin-services.open-id.token_endpoint=https://qa.pkiblog.com/auth/realms/{realmId}/protocol/openid-connect/token
+mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
+mosip.admin-services.open-id.token_endpoint=${keycloak.external.hostl}/auth/realms/{realmId}/protocol/openid-connect/token
 mosip.admin-services.cookie.security=true
 
 mosip.ui.spec.default.domain=registration-client
@@ -204,15 +201,15 @@ mosip.security.secure-cookie=false
 # IAM
 mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
-mosip.iam.module.clientsecret=xyz123
-mosip.iam.module.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
+mosip.iam.module.clientsecret=${mosip.mosip.admin.client.secret}
+mosip.iam.module.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 #mosip.iam.module.redirecturi=${tempuri}/v1/admin/login-redirect/
 #mosip.iam.module.login_flow.scope=cls
 mosip.iam.module.login_flow.scope=email
 mosip.iam.module.login_flow.response_type=code
 mosip.iam.authorization_endpoint=${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/auth
 mosip.iam.module.admin_realm_id=mosip
-mosip.iam.token_endpoint=${mosip.iam.base.url}/auth/realms/mosip/protocol/openid-connect/token
+mosip.iam.token_endpoint=${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/token
 
 regproc.token.request.appid=regproc
 regproc.token.request.clientId=mosip-regproc-client
@@ -226,12 +223,11 @@ mosip.iam.adapter.appid=admin
 mosip.iam.adapter.clientid=mosip-admin-client
 mosip.iam.adapter.clientsecret=${mosip.mosip.admin.client.secret}
 mosip.iam.adapter.issuerURL=${keycloak.external.host}/auth/realms/mosip
-mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
-#mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
+mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
 # in minutes
-mosip.iam.adapter.validate-expiry-check-rate=15
+mosip.iam.adapter.validate-expiry-check-rate=1440
 # in minutes
-mosip.iam.adapter.renewal-before-expiry-interval=15
+mosip.iam.adapter.renewal-before-expiry-interval=1440
 #this should be false if you don?t use this restTemplate true if you do
 mosip.iam.adapter.self-token-renewal-enable=true
 
@@ -284,25 +280,3 @@ mosip.admin.audit.manager.eventName.pattern=^(Click|Page View): ([\\W|\\w]{1,100
 
 # Mapping identity json to map with the applicant id json
 registration.processor.identityjson=identity-mapping.json
-
-###Key manager url's used by KeyManagerDelegation api from admin-service to delegate request
-mosip.kernel.keymanager.generatecsr=${mosip.kernel.keymanager.url}/v1/keymanager/generateCSR
-mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/getCertificate?
-mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
-mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
-
-
-
-
-# this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
-mosip.admin.base.url=https://qa.pkiblog.com
-mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-
-auth.allowed.urls=http://admin.default/
-
-# query param usd to refer url to redirect after logout
-mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
-# end session endpoint in OIDC
-mosip.iam.end-session-endpoint-path=/protocol/openid-connect/logout
