--- a/admin-default.properties
+++ b/admin-default.properties
@@ -15,6 +15,9 @@ mosip.admin.request-id=ADMIN.REQUEST
 mosip.kernel.database.hostname=postgres
 mosip.kernel.database.port=80
 
+
+
+
 ## Account management
 authmanager.base.url=${mosip.kernel-auth-service.url}/v1/authmanager
 mosip.admin.accountmgmt.auth-manager-base-uri=${mosip.kernel-auth-service.url}/v1/authmanager
@@ -45,7 +48,7 @@ hibernate.format_sql=false
 hibernate.connection.charSet=utf8
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
-hibernate.cache.use_structured_entries=false
+hibernate.cache.use_structured_entries=fals
 hibernate.generate_statistics=false
 
 ## Use registration
@@ -183,11 +186,11 @@ mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
+mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
-mosip.admin-services.open-id.token_endpoint=${keycloak.external.hostl}/auth/realms/{realmId}/protocol/openid-connect/token
+mosip.admin-services.open-id.token_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/token
 mosip.admin-services.cookie.security=true
 
 mosip.ui.spec.default.domain=registration-client
@@ -201,7 +204,7 @@ mosip.security.secure-cookie=false
 # IAM
 mosip.iam.module.login_flow.name=authorization_code
 mosip.iam.module.clientID=mosip-admin-client
-mosip.iam.module.clientsecret=${mosip.mosip.admin.client.secret}
+mosip.iam.module.clientsecret=xyz123
 mosip.iam.module.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 #mosip.iam.module.redirecturi=${tempuri}/v1/admin/login-redirect/
 #mosip.iam.module.login_flow.scope=cls
@@ -223,11 +226,12 @@ mosip.iam.adapter.appid=admin
 mosip.iam.adapter.clientid=mosip-admin-client
 mosip.iam.adapter.clientsecret=${mosip.mosip.admin.client.secret}
 mosip.iam.adapter.issuerURL=${keycloak.external.host}/auth/realms/mosip
-mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
+mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
+#mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
 # in minutes
-mosip.iam.adapter.validate-expiry-check-rate=1440
+mosip.iam.adapter.validate-expiry-check-rate=15
 # in minutes
-mosip.iam.adapter.renewal-before-expiry-interval=1440
+mosip.iam.adapter.renewal-before-expiry-interval=15
 #this should be false if you don?t use this restTemplate true if you do
 mosip.iam.adapter.self-token-renewal-enable=true
 
@@ -287,13 +291,16 @@ mosip.kernel.keymanager.getcertificate=${mosip.kernel.keymanager.url}/v1/keymana
 mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadCertificate
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
+
+
+
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=masterdata.kernel/v1
-mosip.admin.keymanager.service.version=keymanager.keymanager/v1
-mosip.admin.base.url=http:/
+mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
+mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=http://localhost:5000/
-#auth.allowed.urls=https://${mosip.admin.host}/
+
+auth.allowed.urls=http://admin.default/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
