--- a/admin-default.properties
+++ b/admin-default.properties
@@ -182,11 +182,11 @@ mosip.admin-services.audit.manager.api=${mosip.auditmanager-service.url}/v1/audi
 mosip.admin-services.open-id.realmid=mosip
 mosip.admin-services.open-id.login_flow.name=authorization_code
 mosip.admin-services.open-id.clientid=mosip-admin-client
-mosip.admin-services.open-id.clientsecret=${mosip.mosip.admin.client.secret}
+mosip.admin-services.open-id.clientsecret=${mosip.admin.client.secret}
 
 #tempuri=https://admin.v3box1.mosip.net
 #mosip.admin-services.redirecturi=${tempuri}/v1/admin/login-redirect/
-mosip.admin-services.redirecturi=https://qa.pkiblog.com/v1/admin/login-redirect/
+mosip.admin-services.redirecturi=${mosip.api.internal.url}/v1/admin/login-redirect/
 mosip.admin-services.open-id.login_flow.scope=email
 mosip.admin-services.open-id.login_flow.response_type=code
 mosip.admin-services.open-id.authorization_endpoint=${keycloak.external.host}/auth/realms/{realmId}/protocol/openid-connect/auth
@@ -224,7 +224,7 @@ KEYBASEDTOKENAPI=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/cl
 # IAM adapter
 mosip.iam.adapter.appid=admin
 mosip.iam.adapter.clientid=mosip-admin-client
-mosip.iam.adapter.clientsecret=${mosip.mosip.admin.client.secret}
+mosip.iam.adapter.clientsecret=${mosip.admin.client.secret}
 mosip.iam.adapter.issuerURL=${keycloak.external.host}/auth/realms/mosip
 mosip.authmanager.client-token-endpoint=http://kernel-auth-service/v1/authmanager/authenticate/clientidsecretkey
 #mosip.authmanager.client-token-endpoint=${mosip.kernel-auth-service.url}/v1/authmanager/authenticate/clientidsecretkey
@@ -295,14 +295,19 @@ mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.u
 
 
 # this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
-mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
-mosip.admin.base.url=https://qa.pkiblog.com
-mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+#mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+#mosip.admin.keymanager.service.version=kernel-keymanager-service.default/v1
+#mosip.admin.base.url=https://qa.pkiblog.com
+#mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 
-auth.allowed.urls=http://admin.default/
+#auth.allowed.urls=http://admin.default/
 
 # query param usd to refer url to redirect after logout
-mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
+#mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
 # end session endpoint in OIDC
-mosip.iam.end-session-endpoint-path=/protocol/openid-connect/logout
+#mosip.iam.end-session-endpoint-path=/protocol/openid-connect/logout
+
+# this property are used in AdminProxyService to get base url and version
+mosip.admin.masterdata.service.version=v1
+mosip.admin.keymanager.service.version=v1
+mosip.admin.base.url=${mosip.api.internal.url}
