--- a/admin-default.properties
+++ b/admin-default.properties
@@ -299,7 +299,7 @@ mosip.admin.masterdata.service.version=masterdata.kernel/v1
 mosip.admin.keymanager.service.version=keymanager.keymanager/v1
 mosip.admin.base.url=http:/
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=https://${mosip.admin.host}/
+auth.allowed.urls=http://admin.default/
 
 									   
 
