--- a/admin-default.properties
+++ b/admin-default.properties
@@ -1,4 +1,4 @@
-# Follow properites have their values assigned via 'overrides' environment variables of config server docker.
+`# Follow properites have their values assigned via 'overrides' environment variables of config server docker.
 # DO NOT define these in any of the property files.  They must be passed as env variables.  Refer to config-server
 # helm chart:
 # db.dbuser.password 
@@ -292,13 +292,14 @@ mosip.kernel.keymanager.uploadcertificate=${mosip.kernel.keymanager.url}/v1/keym
 mosip.kernel.keymanager.uploadotherdomaincertificate=${mosip.kernel.keymanager.url}/v1/keymanager/uploadOtherDomainCertificate
 
 # this property are used in AdminProxyService to get base url and version
-# this property are used in AdminProxyService to get base url and version
-mosip.admin.masterdata.service.url=${mosip.kernel-masterdata-service.url}/v1
-mosip.admin.keymanager.service.url=${mosip.kernel-keymanager-service.url}/v1
-mosip.admin.base.url=http:/
+#mosip.admin.masterdata.service.version=kernel-masterdata-service.default:80/v1
+#mosip.admin.keymanager.service.version=keymanager.keymanager/v1
+mosip.admin.masterdata.service.version=v1
+mosip.admin.keymanager.service.version=v1
+mosip.admin.base.url=https://qa.pkiblog.com
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
-auth.allowed.urls=https://${mosip.admin.host}/
-												 
+
+auth.allowed.urls=http://admin.default/
 
 # query param usd to refer url to redirect after logout
 mosip.iam.post-logout-uri-param-key=post_logout_redirect_uri
